@@ -2,23 +2,26 @@ package com.framework.backend.config;
 
 import com.framework.backend.config.handler.*;
 import jakarta.annotation.Resource;
-import java.util.Arrays;
 import java.util.Collections;
+import java.util.List;
 import org.apache.commons.lang3.ArrayUtils;
 import org.apache.commons.lang3.StringUtils;
 import org.springframework.beans.factory.annotation.Value;
 import org.springframework.context.annotation.Bean;
 import org.springframework.context.annotation.Configuration;
+import org.springframework.security.authentication.AuthenticationManager;
+import org.springframework.security.authentication.ProviderManager;
+import org.springframework.security.authentication.dao.DaoAuthenticationProvider;
 import org.springframework.security.config.annotation.method.configuration.EnableMethodSecurity;
 import org.springframework.security.config.annotation.web.builders.HttpSecurity;
 import org.springframework.security.config.annotation.web.configuration.EnableWebSecurity;
 import org.springframework.security.config.annotation.web.configurers.AbstractHttpConfigurer;
 import org.springframework.security.config.annotation.web.configurers.HeadersConfigurer;
-import org.springframework.security.config.http.SessionCreationPolicy;
 import org.springframework.security.crypto.bcrypt.BCryptPasswordEncoder;
 import org.springframework.security.crypto.password.PasswordEncoder;
 import org.springframework.security.web.SecurityFilterChain;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
+import org.springframework.session.web.http.HeaderHttpSessionIdResolver;
 import org.springframework.web.cors.CorsConfiguration;
 import org.springframework.web.cors.CorsConfigurationSource;
 import org.springframework.web.cors.UrlBasedCorsConfigurationSource;
@@ -48,12 +51,20 @@ public class SecurityConfig {
   @Resource private MyAuthenticationEntryPoint loginAuthenticationHandler;
   @Resource private MyAccessDeniedHandler loginAccessDefineHandler;
   @Resource private MyLogoutSuccessHandler logoutSuccessHandler;
-  @Resource private MyLogoutHandler logoutHandler;
-  @Resource private CheckTokenFilter checkTokenFilter;
+  @Resource private MyUserDetailsService userService;
+
+  // @Autowired public AuthenticationProvider myAuthenticationProvider;
 
   @Bean
   public PasswordEncoder passwordEncoder() {
     return new BCryptPasswordEncoder();
+  }
+
+  /** 配置从http header中获取session id. */
+  @Bean
+  public HeaderHttpSessionIdResolver headerHttpSessionIdResolver() {
+    // HeaderHttpSessionIdResolver.xAuthToken();
+    return new HeaderHttpSessionIdResolver("X-Auth-Token");
   }
 
   /**
@@ -86,8 +97,7 @@ public class SecurityConfig {
       "/swagger-resources",
       "/swagger-resources/configuration/security",
       "/swagger-ui.html",
-      "/webjars/**",
-      "security/role/test"
+      "/webjars/**"
     };
     String[] permitAllUrls;
     // 当需要开放自定义的URL时
@@ -98,7 +108,8 @@ public class SecurityConfig {
       permitAllUrls = publicUrlsArray;
     }
 
-    http // 使用自己自定义的过滤器 去过滤接口请求
+    http // 使用自定义登录过滤器，登录时可以额外支持json数据格式参数
+        .addFilterAt(myLoginFilter(), UsernamePasswordAuthenticationFilter.class)
         .formLogin(
             formLogin ->
                 // 这里更改SpringSecurity的认证接口地址，这样就默认处理这个接口的登录请求了
@@ -109,18 +120,9 @@ public class SecurityConfig {
                     // 　自定义的登录验证成功或失败后的去向
                     .successHandler(loginSuccessHandler)
                     .failureHandler(loginFailureHandler))
-        .logout(
-            logout ->
-                logout
-                    .logoutUrl(logoutUrl)
-                    .addLogoutHandler(logoutHandler)
-                    .logoutSuccessHandler(logoutSuccessHandler))
+        .logout(logout -> logout.logoutUrl(logoutUrl).logoutSuccessHandler(logoutSuccessHandler))
         // 禁用了 CSRF 保护。
         .csrf(AbstractHttpConfigurer::disable)
-        // 配置了会话管理策略为 STATELESS（无状态）。在无状态的会话管理策略下，应用程序不会创建或使用 HTTP 会话，每个请求都是独立的，服务器不会在请求之间保留任何状态信息。
-        .sessionManagement(
-            (sessionManagement) ->
-                sessionManagement.sessionCreationPolicy(SessionCreationPolicy.STATELESS))
         .authorizeHttpRequests(
             (authorizeRequests) ->
                 // 这里过滤一些 不需要token的接口地址
@@ -128,8 +130,9 @@ public class SecurityConfig {
                     .requestMatchers(permitAllUrls)
                     .permitAll()
                     .requestMatchers(loginUrl)
-                    .permitAll())
-        //  .addFilterBefore(checkTokenFilter, UsernamePasswordAuthenticationFilter.class)
+                    .permitAll()
+                    .anyRequest()
+                    .authenticated())
         .exceptionHandling(
             (exceptionHandling) ->
                 exceptionHandling
@@ -140,7 +143,6 @@ public class SecurityConfig {
         .headers((headers) -> headers.frameOptions((HeadersConfigurer.FrameOptionsConfig::disable)))
         .headers(
             (headers) -> headers.frameOptions((HeadersConfigurer.FrameOptionsConfig::sameOrigin)));
-    http.addFilterBefore(checkTokenFilter, UsernamePasswordAuthenticationFilter.class);
     // 构建过滤链并返回
     return http.build();
   }
@@ -152,9 +154,35 @@ public class SecurityConfig {
     corsConfiguration.setAllowedMethods(Collections.singletonList("*"));
     corsConfiguration.setAllowedOrigins(Collections.singletonList("*"));
     corsConfiguration.setMaxAge(3600L);
-    corsConfiguration.setExposedHeaders(Arrays.asList("x-auth-token"));
+    corsConfiguration.setExposedHeaders(List.of("x-auth-token"));
     UrlBasedCorsConfigurationSource source = new UrlBasedCorsConfigurationSource();
     source.registerCorsConfiguration("/**", corsConfiguration);
     return source;
+  }
+
+  /**
+   * 使用自定义登录过滤器，登录时可以额外支持json数据格式参数
+   *
+   * @return
+   */
+  @Bean
+  MyLoginFilter myLoginFilter() {
+    MyLoginFilter myLoginFilter = new MyLoginFilter();
+    myLoginFilter.setFilterProcessesUrl(loginUrl);
+    myLoginFilter.setUsernameParameter(usernameParameter);
+    myLoginFilter.setPasswordParameter(passwordParameter);
+    myLoginFilter.setAuthenticationSuccessHandler(loginSuccessHandler);
+    myLoginFilter.setAuthenticationFailureHandler(loginFailureHandler);
+    myLoginFilter.setAuthenticationManager(authenticationManagerBean());
+    return myLoginFilter;
+  }
+
+  @Bean
+  public AuthenticationManager authenticationManagerBean() {
+    DaoAuthenticationProvider authenticationProvider = new DaoAuthenticationProvider();
+    authenticationProvider.setUserDetailsService(userService);
+    authenticationProvider.setPasswordEncoder(passwordEncoder());
+    // 创建ProviderManager，并注入自定义的AuthenticationProvider
+    return new ProviderManager(authenticationProvider);
   }
 }
